Add new files essential for phone login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
             android:name=".service.HttpService"
             android:exported="false" />
 
-        <activity android:name=".ChangePassword"></activity>
+        <activity android:name=".activity.ChangePassword"></activity>
     </application>
 
 </manifest>
